# colormap

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cc
libcolormap/: colormap.h
